crates/oxc_angular_compiler/tests/snapshots/integration_test__output_from_observable_piped.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: result.code
---

import { Component } from '@angular/core';
import { outputFromObservable } from '@angular/core/rxjs-interop';
import * as i0 from '@angular/core';

export class TestComponent {
    readonly queryChanged = outputFromObservable(
        this.dataService.value$.pipe(
            skip(1),
            debounceTime(300),
        ),
    );

static ɵfac = function TestComponent_Factory(__ngFactoryType__) {
  return new (__ngFactoryType__ || TestComponent)();
};
static ɵcmp = /*@__PURE__*/ i0.ɵɵdefineComponent({type:TestComponent,selectors:[["test-comp"]],outputs:{queryChanged:"queryChanged"},
    decls:0,vars:0,template:function TestComponent_Template(rf,ctx) {
    },encapsulation:2});
}
(() =>{
  (((typeof ngDevMode === "undefined") || ngDevMode) && i0.ɵsetClassDebugInfo(TestComponent,
      {className:"TestComponent",filePath:"test.component.ts",lineNumber:10}));
})();
(() =>{
  (((typeof ngDevMode === "undefined") || ngDevMode) && i0.ɵsetClassMetadata(TestComponent,
      [{type:Component,args:[{selector:"test-comp",standalone:true,template:""}]}],
      null,null));
})();
