crates/oxc_angular_compiler/tests/snapshots/integration_test__pipe_in_binary_with_safe_property_read.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
assertion_line: 1170
expression: js
---
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵelementStart(0,"div");
    i0.ɵɵtext(1);
    i0.ɵɵpipe(2,"async");
    i0.ɵɵelementEnd();
  }
  if ((rf & 2)) {
    let tmp_0_0;
    i0.ɵɵadvance();
    i0.ɵɵtextInterpolate((((tmp_0_0 = (i0.ɵɵpipeBind1(2,1,ctx.data$) || ctx.fallback)) == null)? null: tmp_0_0.name));
  }
}
