crates/oxc_angular_compiler/tests/snapshots/integration_test__safe_call_in_listener_inside_conditional.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Conditional_0_Template(rf,ctx) {
  if ((rf & 1)) {
    const _r1 = i0.ɵɵgetCurrentView();
    i0.ɵɵtext(0," ");
    i0.ɵɵelementStart(1,"button",0);
    i0.ɵɵlistener("click",function TestComponent_Conditional_0_Template_button_click_1_listener() {
      let tmp_2_0;
      i0.ɵɵrestoreView(_r1);
      const ctx_r1 = i0.ɵɵnextContext();
      return i0.ɵɵresetView((((tmp_2_0 = ctx_r1.getPopover()) == null)? null: tmp_2_0.close()));
    });
    i0.ɵɵtext(2,"Close");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3," ");
  }
}
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) { i0.ɵɵconditionalCreate(0,TestComponent_Conditional_0_Template,4,0); }
  if ((rf & 2)) { i0.ɵɵconditional((ctx.show? 0: -1)); }
}
